# jsmooch-emus

./: .gitignore  .gitmodules  CMakeLists.txt  README.MD  TODO.md  gensln.bat  scape_sh.py
jsmooch-gui/: CMakeLists.txt
jsmooch-gui/cmake/modules/: FindSDL2.cmake
jsmooch-gui/src/: application.cpp  application.h  audiowrap.cpp  audiowrap.h  build.h  full_sys.cpp  full_sys.h  jsmooch-gui.c  jsmooch-gui.cpp  jsmooch-gui.h  keymap_translate.cpp  keymap_translate.h  my_texture.cpp  my_texture.h  my_texture_metal.cpp  my_texture_ogl3.cpp  my_texture_ogl3.h  my_texture_sdlgpu.cpp  my_texture_sdlgpu.h  my_texture_sdlr3.cpp  my_texture_sdlr3.h  my_texture_wgpu.cpp  my_texture_wgpu.h
jsmooch-lib/: .editorconfig  CMakeLists.txt
jsmooch-lib/code_gen/: yo.py
jsmooch-lib/code_gen/arm7tdmi/: thumb_instructions.txt
jsmooch-lib/code_gen/dreamcast/registers/: deecy_conv.py  dreamcast_regs.txt  reggie.py  regs.txt  sh4_regs.txt
jsmooch-lib/code_gen/huc6280/: huc6280_gen.py
jsmooch-lib/code_gen/m6502/: generation.js  index.html  m6502_core_generator.js  m6502_opcodes.js
jsmooch-lib/code_gen/m68k/: instruction_grouping_for_gen.py  test_out.c  test_out.h
jsmooch-lib/code_gen/m68k/ins_decode/: instructions.txt  make_decoder.py
jsmooch-lib/code_gen/sm83/: generation.js  index.html  sm83_core_generator.js  sm83_opcodes.js
jsmooch-lib/code_gen/wdc65816/: generation.js  index.html  wdc65816_core_generator.js
jsmooch-lib/code_gen/wdc65816_and_spc700/: compare_traces.py  generation.js  index.html  spc700_core_generator.js  wdc65816_core_generator.js
jsmooch-lib/code_gen/z80/: generation.js  index.html  z80_core_generator.js
jsmooch-lib/src/component/floppy/: generic_floppy.c  generic_floppy.cpp  generic_floppy.h  mac_floppy.c  mac_floppy.cpp  mac_floppy.h
jsmooch-lib/src/component/misc/: m6532.c  m6532.h
jsmooch-lib/src/helpers/: audiobuf.c  audiobuf.cpp  audiobuf.h  better_irq_multiplexer.c  better_irq_multiplexer.cpp  better_irq_multiplexer.h  bitbuffer.c  bitbuffer.cpp  bitbuffer.h  buf.c  buf.cpp  buf.h  ccircular.c  ccircular.h  cdrom_formats.cpp  cdrom_formats.h  color.h  cvec.c  cvec.cpp  cvec.h  debug.c  debug.cpp  debug.h  elf_helpers.c  elf_helpers.cpp  elf_helpers.h  enums.h  file_exists.cpp  file_exists.h  img.cpp  img.h  inifile.c  inifile.cpp  inifile.h  int.h  intrinsics.h  irq_multiplexer.c  irq_multiplexer.cpp  irq_multiplexer.h  jsm_string.c  (+26 more)
jsmooch-lib/src/helpers/debugger/: console.c  console.cpp  dbglog.c  dbglog.cpp  dbglog.h  debugger.c  debugger.cpp  debugger.h  debuggerdefs.h  disassembly.c  disassembly.cpp  disassembly.h  events.c  events.cpp  events.h  image.c  image.cpp  image.h  memory.c  memory.cpp  memory.h  source_list.cpp  trace.c  trace.cpp  trace.h  waveform.c  waveform.cpp  waveform.h  waveform2.cpp  waveform2.h
jsmooch-lib/src/helpers/present/: ps1_present.h  sys_present.cpp  sys_present.h
jsmooch-lib/src/helpers/serialize/: serialize.c  serialize.cpp  serialize.h
jsmooch-lib/src/helpers_c/: audiobuf.c  audiobuf.h  better_irq_multiplexer.c  better_irq_multiplexer.h  bitbuffer.c  bitbuffer.h  buf.c  buf.h  ccircular.c  ccircular.h  color.h  cvec.c  cvec.h  debug.c  debug.h  elf_helpers.c  elf_helpers.h  enums.h  img.c  img.h  inifile.c  inifile.h  int.h  irq_multiplexer.c  irq_multiplexer.h  jsm_string.c  jsm_string.h  multisize_memaccess.c  ooc.h  physical_io.c  physical_io.h  scheduler.c  scheduler.h  simplebuf.c  simplebuf.h  sram.c  sram.h  sys_interface.c  sys_interface.h  sys_present.c  (+5 more)
jsmooch-lib/src/helpers_c/debugger/: console.c  console.h  dbglog.c  dbglog.h  debugger.c  debugger.h  debuggerdefs.h  disassembly.c  disassembly.h  events.c  events.h  image.c  image.h  memory.c  memory.h  trace.c  trace.h  waveform.c  waveform.h
jsmooch-lib/src/helpers_c/serialize/: serialize.c  serialize.h
jsmooch-lib/src/ooc/: ooc.h
jsmooch-lib/src/system/apple2/: apple2.c  apple2.h  apple2_internal.c  apple2_internal.h  iou.c  iou.h  mmu.c  mmu.h
jsmooch-lib/src/system/atari2600/: atari2600.c  atari2600.h  atari2600_bus.c  atari2600_bus.h  cart.c  cart.h  pal.txt  pal2.txt  tia.c  tia.h  tia_old.c
jsmooch-lib/src/system/commodore64/: c64_bus.cpp  c64_bus.h  c64_clock.cpp  c64_clock.h  c64_debugger.cpp  c64_debugger.h  c64_keyboard.cpp  c64_keyboard.h  c64_mem.cpp  c64_mem.h  c64_serialize.cpp  c64_serialize.h  c64_vic2_color.cpp  c64_vic2_color.h  commodore64.cpp  commodore64.h  vic2.cpp  vic2.h
jsmooch-lib/src/system/cosmac_vip/: cosmac_vip.cpp  cosmac_vip.h  vip_bus.cpp  vip_bus.h  vip_clock.cpp  vip_clock.h  vip_debugger.cpp  vip_debugger.h  vip_serialize.cpp
jsmooch-lib/src/system/dreamcast/: aica_mem.c  aica_mem.h  controller.c  controller.cpp  controller.h  dc_bus.cpp  dc_bus.h  dc_debugger.cpp  dc_debugger.h  dc_mem.c  dc_mem.cpp  dc_mem.h  dreamcast.c  dreamcast.cpp  dreamcast.h  g2.c  g2.cpp  g2.h  gdi.c  gdi.cpp  gdi.h  gdrom.c  gdrom.cpp  gdrom.h  gdrom_reply.h  holly.c  holly.cpp  holly.h  holly_regs.h  holly_sw.cpp  holly_sw.h  maple.c  maple.cpp  maple.h  mem_reg_map.txt  spi.h  triangle.c  (+2 more)
jsmooch-tests/: CMakeLists.txt
jsmooch-tests/src/: jsmooch-tests.c  jsmooch-tests.cpp  jsmooch-tests.h  json.h  z80_drag_race.c  z80_drag_race.h
jsmooch-tests/src/cpu-test-generators/: myrandom.c  myrandom.h  sh4.c  sh4_test_generator.c  sh4_test_generator.cpp  sh4_test_generator.h
jsmooch-tests/src/cpu-tests/: arm7tdmi_tests.c  arm7tdmi_tests.h  cdp1802_tests.cpp  cdp1802_tests.h  convert_68000.py  cpu-test-helpers.c  cpu-test-helpers.cpp  cpu-test-helpers.h  huc6280_tests.c  huc6280_tests.h  json_tests.c  json_tests.h  m6502_tests.c  m6502_tests.cpp  m6502_tests.h  m68000-tests.c  m68000-tests.cpp  m68000-tests.h  r3000_tests.cpp  r3000_tests.h  rca1802_tests.cpp  rca1802_tests.h  rfb.c  rfb.cpp  rfb.h  sh4-tests.c  sh4-tests.cpp  sh4-tests.h  sm83-tests.c  sm83-tests.h  spc700_tests.c  spc700_tests.cpp  spc700_tests.h  temp.py  wdc65816_tests.c  wdc65816_tests.h  z80-tests.c  z80-tests.cpp  z80-tests.h
jsmooch-tests/src/helper-tests/: dasm-range-tests.c  dasm-range-tests.h  scheduler-tests.c  scheduler-tests.h
(+692 files in other folders)
